# ms-compitem-crud

./: .gitignore  .mega-linter.yml  Dockerfile  LICENSE  README.md  component.toml  gen-swagger.sh  index.yaml  main.py  openapi.json  pyproject.toml  renovate.json  requirements.in  requirements.txt  trivy-results.sarif
.github/: dependabot.yml
.github/linters/: .ruff.toml
.github/workflows/: auto-approve.yml  build-push-chart.yml  codeql.yml  helm-chart-releaser.yml  mega-linter.yml  scorecard.yml
chart/ms-compitem-crud/: Chart.yaml  README.md  aks-cluster-values.yaml  values.yaml
chart/ms-compitem-crud/templates/: deployment.yaml  service.yaml
chart/ms-validate-user/: values.yaml
chart/ms-validate-user/templates/: deployment.yaml
cloudbuild/: cloudbuild.yaml
static/: swagger.yml
static/swagger-ui/doc/: swagger.yml
