[tool.poetry]
name = "ms-compitem-crud"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.121.3"
psycopg2-binary = "2.9.11"
pydantic = "2.12.4"
sqlalchemy = "2.0.44"
uvicorn = "0.38.0"
requests = "2.32.5"
certifi = "2025.11.12"
idna = "3.11"
starlette = "0.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
